# Tetioevry-assignment

./: .gitignore  CMakeLists.txt  README.md  main.cpp
entity/: archer.h  base.h  catapult.h  entity.cpp  entity.h  knight.cpp  knight.h  pikeman.h  ram.h  swordsman.h  worker.h
mediator/: main_mediator.cpp  mediator.cpp  mediator.h
player/: main_player.cpp  player.cpp  player.h
txt_files/: map.txt  orders.txt  status.txt
